<resources>
    <string name="app_name">Gallery</string>
    <string name="app_description">WinBoLL Album App</string>
    <string name="refresh">Refresh</string>
    <string name="settings">Settings</string>
    <string name="settings_title">Settings</string>
    <string name="about">About</string>
    <string name="folder_path">Folder Path</string>
    <string name="enter_folder_path">Enter folder path</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="no_images_found">No images found</string>
    <string name="trash">Trash</string>
    <string name="clear_trash">Clear Trash</string>
    <string name="delete_confirm">Delete to trash?</string>
    <string name="restore_confirm">Restore to original folder?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="debug_log">Debug Log</string>
    <string name="debug_message">Debug log message</string>
    <string name="system_gallery">系统相册</string>
    <string name="mi_gallery">小米相册</string>
    <string name="reset_gallery">重置</string>
</resources>
