<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <item
        android:id="@+id/action_mi_gallery"
        android:title="@string/mi_gallery"
        android:icon="@drawable/ic_mi_gallery"
        app:showAsAction="ifRoom"/>
    
    <item
        android:id="@+id/action_change_bg_color"
        android:title="修改背景颜色"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_trash"
        android:title="@string/trash"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_about"
        android:title="@string/about"
        app:showAsAction="never"/>
    
    <item
        android:id="@+id/action_debug"
        android:title="@string/debug_log"
        app:showAsAction="never"/>
    
</menu>